# ostree

./: .cci.jenkinsfile  .clang-format  .dockerignore  .gitignore  .gitmodules  .lgtm.yml  .packit.yaml  .papr-ex.yaml  .papr.Dockerfile  .papr.yml  .redhat-ci.Dockerfile  .redhat-ci.yml  .travis.yml  .vimrc  CONTRIBUTING.md  COPYING  Cargo.toml  DESIGN  Dockerfile  GNUmakefile  Justfile  Makefile-bash.am  Makefile-boot.am  Makefile-daemon.am  Makefile-decls.am  Makefile-dracut.am  Makefile-gbuild.am  Makefile-hacktree.am  Makefile-libostree-defines.am  Makefile-libostree.am  Makefile-man.am  Makefile-osbuild.am  Makefile-ostadmin.am  Makefile-ostbuild.am  Makefile-ostree.am  Makefile-otcore.am  Makefile-otutil.am  Makefile-src.am  Makefile-switchroot.am  Makefile-sysroot-rs.am  (+19 more)
.copr/: Makefile
.gemini/: config.yaml
.github/: dependabot.yml  labeler.yml
CONTRIBUTING/: index.html
README-historical/: index.html
adapting-existing/: index.html
apidoc/: .gitignore  Makefile.am  atomic-upgrades.xml  deployment.xml  ostree-docs.xml  ostree-experimental-sections.txt  ostree-sections.txt  repo.xml
atomic-rollbacks/: index.html
atomic-upgrades/: index.html
authenticated-repos/: index.html
bash/: ostree
bootloaders/: index.html
buildsystem-and-repos/: index.html
buildutil/: glib-tap.mk  glibtests.m4  tap-driver.sh  tap-test
ci/: 0001-tests-Fix-race-condition-in-tmp-webserver.patch  Containerfile.c9s  Makefile.dist-packaging  build-check-sanitized.sh  build-check.sh  build-rpm.sh  build.sh  (+20 more)
doc/: .gitignore  Makefile.am  adapting-existing.xml  atomic-upgrades.xml  deployment.xml  libostree-docs.xml  libostree-sections.txt  ostree-admin-cleanup.xml  ostree-admin-config-diff.xml  ostree-admin-deploy.xml  ostree-admin-init-fs.xml  ostree-admin-instutil.xml  ostree-admin-os-init.xml  ostree-admin-status.xml  ostree-admin-switch.xml  ostree-admin-undeploy.xml  ostree-admin-upgrade.xml  ostree-admin.xml  ostree-cat.xml  ostree-checkout.xml  ostree-checksum.xml  ostree-cherry-pick.xml  ostree-commit.xml  ostree-config.xml  ostree-diff.xml  ostree-docs.xml  ostree-fsck.xml  ostree-gpg-sign.xml  ostree-init.xml  ostree-log.xml  ostree-ls.xml  ostree-name.xml  ostree-prune.xml  ostree-pull-local.xml  ostree-pull.xml  ostree-refs.xml  ostree-remote.xml  ostree-reset.xml  ostree-rev-parse.xml  ostree-sections.txt  (+10 more)
embedded-dependencies/: Makefile.am  Makefile.bootstrap  README
rust-bindings/rust/: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md
rust-bindings/rust/.ci/: generate-test-jobs.sh  gitlab-ci-base.yml
rust-bindings/rust/.github/workflows/: rust.yml
rust-bindings/rust/conf/: libostree-sys.toml  libostree.toml  ostree-sys.toml  ostree.toml
rust-bindings/rust/gir-files/: GLib-2.0.gir  GObject-2.0.gir  Gio-2.0.gir  OSTree-1.0.gir
rust-bindings/rust/libostree/: Cargo.toml  LICENSE  README.md  build.rs
rust-bindings/rust/libostree-sys/: Cargo.toml  README.md  build.rs
rust-bindings/rust/libostree-sys/src/: lib.rs  manual.rs
rust-bindings/rust/libostree-sys/tests/: abi.rs  constant.c  layout.c  manual.h
rust-bindings/rust/libostree/src/: lib.rs  object_name.rs  prelude.rs  repo.rs
rust-bindings/rust/libostree/src/auto/: async_progress.rs  collection_ref.rs  constants.rs  enums.rs  flags.rs  functions.rs  gpg_verify_result.rs  mod.rs  mutable_tree.rs  remote.rs  repo.rs  repo_commit_modifier.rs  repo_dev_ino_cache.rs  repo_file.rs  repo_transaction_stats.rs  se_policy.rs  versions.txt
rust-bindings/rust/libostree/tests/: roundtrip.rs
rust-bindings/rust/sample/: Cargo.toml
rust-bindings/rust/sample/src/: main.rs
rust-bindings/rust/src/: .gitattributes  checksum.rs  collection_ref.rs  constants.rs  core.rs  functions.rs  kernel_args.rs  lib.rs  object_details.rs  object_name.rs  repo.rs  repo_checkout_at_options.rs  repo_transaction_stats.rs  se_policy.rs  sysroot.rs  sysroot_deploy_tree_opts.rs  sysroot_write_deployments_opts.rs
rust-bindings/rust/src/auto/: async_progress.rs  bootconfig_parser.rs  collection_ref.rs  commit_sizes_entry.rs  constants.rs  content_writer.rs  deployment.rs  diff_item.rs  enums.rs  flags.rs  functions.rs  gpg_verify_result.rs  mod.rs  mutable_tree.rs  mutable_tree_iter.rs  remote.rs  repo.rs  repo_commit_modifier.rs  repo_dev_ino_cache.rs  repo_file.rs  repo_finder.rs  repo_finder_avahi.rs  repo_finder_config.rs  repo_finder_mount.rs  repo_finder_override.rs  repo_finder_result.rs  repo_transaction_stats.rs  se_policy.rs  sign.rs  sysroot.rs  sysroot_upgrader.rs  versions.txt
rust-bindings/rust/src/collection_ref/: mod.rs  tests.rs
rust-bindings/rust/src/repo/: mod.rs  tests.rs
rust-bindings/rust/src/repo_checkout_at_options/: mod.rs  repo_checkout_filter.rs
rust-bindings/rust/src/tests/: collection_ref.rs  kernel_args.rs  mod.rs  repo.rs
rust-bindings/rust/sys/: Cargo.toml  build.rs
rust-bindings/rust/sys/src/: lib.rs  manual.rs
rust-bindings/rust/sys/src/auto/: versions.txt
rust-bindings/rust/sys/tests/: abi.rs  constant.c  layout.c
rust-bindings/rust/tests/: repo.rs  roundtrip.rs  tests.rs
rust-bindings/rust/tests/core/: mod.rs
rust-bindings/rust/tests/functions/: checksum_file_at.rs  mod.rs
rust-bindings/rust/tests/repo/: checkout_at.rs  mod.rs
rust-bindings/rust/tests/sign/: mod.rs
rust-bindings/rust/tests/util/: mod.rs
rust-bindings/sys/: Cargo.toml  LICENSE  build.rs
rust-bindings/sys/src/: lib.rs
rust-bindings/sys/src/auto/: versions.txt
rust-bindings/sys/tests/: abi.rs  constant.c  layout.c  manual.h
src/sysroot-rs/: Cargo.toml
src/sysroot-rs/src/: lib.rs
tests/bootc-integration/: Cargo.toml  bootc-e2e.md
tests/bootc-integration/src/: lib.rs  main.rs
tests/bootc-integration/src/tests/: mod.rs  privileged.rs
tests/inst/: Cargo.toml
tests/inst/itest-macro/: Cargo.toml
tests/inst/itest-macro/src/: itest-macro.rs
tests/inst/src/: composefs.rs  destructive.rs  fsverity.rs  insttest.rs  insttestmain.rs  repobin.rs  rpmostree.rs  sysroot.rs  test.rs  treegen.rs
tests/xtask/: Cargo.toml
tests/xtask/src/: main.rs  tmt.rs
(+1467 files in other folders)
